Better spacing for score entry form

--- a/style.css
+++ b/style.css
@@ -57,8 +57,11 @@ header {
 }
 
 #scoreform {
-    margin: auto;
     color: var(--main-color);
+}
+
+#initials {
+    margin: 10px;
 }
 
 #highscorelist {
